@@ -64,6 +64,7 @@
 2011-01-21  Tobias Liebig  <mail_typo3@etobi.de>
 
 	* Fixed bug #17180: t3editor claims more then 100% width
+	* Raised version number of t3editor to 1.5.0
 
 2011-01-21  Christian Kuhn  <lolli@schwarzbu.ch>
 
